# workforce-frontend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Procfile  README.md  SECURITY_TRIAGE.md  docker-compose.yml  schema.graphql
a11y/: .pa11yci.public.json  README.md  pa11yci.auth.js  package.json
docs/: CRUD_PLAN.md  GC_DESIGN_SYSTEM_COMPLIANCE.md  ORG_CHART_BUILDER.md  ORG_CHART_EXPLORER_PLAN.md  ORG_STRUCTURE_REDESIGN.md  ORG_WORKFLOWS_DESIGN.md  PRODUCTS_TASKS_WORK_ROADMAP.md  api_changes_for_analytics.md  capability_work_implementation_plan.md  person_user_manager_authz_frontend.md  visualization_analytics_implementation_plan.md
docs/a11y/: baseline-inventory.md  phase-1-notes.md  phase-2-notes.md  phase-3-notes.md  phase-4-notes.md  phase-5-notes.md  token-mapping.md
docs/mockups/: org_chart_builder.html
frontend/: CLAUDE.md
frontend/src/: lib.rs
i18n/en/: epifront.ftl  workforce.ftl
i18n/fr/: epifront.ftl  workforce.ftl
migrations/2022-02-10-201856_create_basic_tables/: down.sql  up.sql
queries/: log_in.graphql  me.graphql
queries/analytics/: analytics_mobility.graphql  analytics_people.graphql  analytics_roles.graphql  capability_growth.graphql  capability_supply_demand.graphql  delivery_treemap.graphql  org_tier_capability_matrix.graphql  org_tier_financials.graphql  priority_mismatches.graphql  talent_movements.graphql  team_capability_matrix.graphql
src/: deployment.rs  lib.rs  main.rs  notifications.rs  security.rs
templates/: about.html  base.html  index.html
tests/: templates_render.rs
(+276 files in other folders)
